// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FIXEncoder #encode: Custom header/trailer should have encoded the FIX message with custom FIX version 1`] = `
Message {
  "bodyLengthExpected": null,
  "bodyLengthValid": false,
  "bodyLengthValue": null,
  "checksumExpected": null,
  "checksumValid": false,
  "checksumValue": null,
  "data": Array [
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 35,
      "type": null,
      "validated": false,
      "value": "A",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 8,
      "type": null,
      "validated": false,
      "value": "FIX.4.3",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 34,
      "type": null,
      "validated": false,
      "value": 702,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 49,
      "type": null,
      "validated": false,
      "value": "ABC",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 52,
      "type": null,
      "validated": false,
      "value": "20100130-10:52:40.663",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 56,
      "type": null,
      "validated": false,
      "value": "XYZ",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 95,
      "type": null,
      "validated": false,
      "value": 4,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 96,
      "type": null,
      "validated": false,
      "value": 1234,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 98,
      "type": null,
      "validated": false,
      "value": 0,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 108,
      "type": null,
      "validated": false,
      "value": 60,
    },
  ],
  "description": "",
  "fixVersion": "FIX.5.0SP2",
  "messageContents": Array [],
  "messageSequence": 702,
  "messageString": "",
  "messageType": "",
}
`;

exports[`FIXEncoder #encode: Custom header/trailer should have encoded the FIX message with custom FIX version 2`] = `"8=FIX.4.39=7635=A34=70249=ABC52=20100130-10:52:40.66356=XYZ95=496=123498=0108=6010=135"`;

exports[`FIXEncoder #encode: Custom header/trailer should have encoded the FIX message with custom Fields.BodyLength 1`] = `
Message {
  "bodyLengthExpected": null,
  "bodyLengthValid": false,
  "bodyLengthValue": null,
  "checksumExpected": null,
  "checksumValid": false,
  "checksumValue": null,
  "data": Array [
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 35,
      "type": null,
      "validated": false,
      "value": "A",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 34,
      "type": null,
      "validated": false,
      "value": 702,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 49,
      "type": null,
      "validated": false,
      "value": "ABC",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 52,
      "type": null,
      "validated": false,
      "value": "20100130-10:52:40.663",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 9,
      "type": null,
      "validated": false,
      "value": 123456,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 56,
      "type": null,
      "validated": false,
      "value": "XYZ",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 95,
      "type": null,
      "validated": false,
      "value": 4,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 96,
      "type": null,
      "validated": false,
      "value": 1234,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 98,
      "type": null,
      "validated": false,
      "value": 0,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 108,
      "type": null,
      "validated": false,
      "value": 60,
    },
  ],
  "description": "",
  "fixVersion": "FIX.5.0SP2",
  "messageContents": Array [],
  "messageSequence": 702,
  "messageString": "",
  "messageType": "",
}
`;

exports[`FIXEncoder #encode: Custom header/trailer should have encoded the FIX message with custom Fields.BodyLength 2`] = `"8=FIX.5.0SP29=12345635=A34=70249=ABC52=20100130-10:52:40.66356=XYZ95=496=123498=0108=6010=034"`;

exports[`FIXEncoder #encode: Custom header/trailer should have encoded the FIX message with custom Fields.CheckSum 1`] = `
Message {
  "bodyLengthExpected": null,
  "bodyLengthValid": false,
  "bodyLengthValue": null,
  "checksumExpected": null,
  "checksumValid": false,
  "checksumValue": null,
  "data": Array [
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 35,
      "type": null,
      "validated": false,
      "value": "A",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 10,
      "type": null,
      "validated": false,
      "value": 999,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 34,
      "type": null,
      "validated": false,
      "value": 702,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 49,
      "type": null,
      "validated": false,
      "value": "ABC",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 52,
      "type": null,
      "validated": false,
      "value": "20100130-10:52:40.663",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 56,
      "type": null,
      "validated": false,
      "value": "XYZ",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 95,
      "type": null,
      "validated": false,
      "value": 4,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 96,
      "type": null,
      "validated": false,
      "value": 1234,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 98,
      "type": null,
      "validated": false,
      "value": 0,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 108,
      "type": null,
      "validated": false,
      "value": 60,
    },
  ],
  "description": "",
  "fixVersion": "FIX.5.0SP2",
  "messageContents": Array [],
  "messageSequence": 702,
  "messageString": "",
  "messageType": "",
}
`;

exports[`FIXEncoder #encode: Custom header/trailer should have encoded the FIX message with custom Fields.CheckSum 2`] = `"8=FIX.5.0SP29=7635=A34=70249=ABC52=20100130-10:52:40.66356=XYZ95=496=123498=0108=6010=999"`;

exports[`FIXEncoder #encode: Heartbeat should have encoded the FIX message 1`] = `
Message {
  "bodyLengthExpected": null,
  "bodyLengthValid": false,
  "bodyLengthValue": null,
  "checksumExpected": null,
  "checksumValid": false,
  "checksumValue": null,
  "data": Array [
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 35,
      "type": null,
      "validated": false,
      "value": "0",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 34,
      "type": null,
      "validated": false,
      "value": 703,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 49,
      "type": null,
      "validated": false,
      "value": "ABC",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 52,
      "type": null,
      "validated": false,
      "value": "20100130-10:53:40.830",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 56,
      "type": null,
      "validated": false,
      "value": "XYZ",
    },
  ],
  "description": "",
  "fixVersion": "FIX.5.0SP2",
  "messageContents": Array [],
  "messageSequence": 703,
  "messageString": "",
  "messageType": "",
}
`;

exports[`FIXEncoder #encode: Heartbeat should have encoded the FIX message 2`] = `"8=FIX.5.0SP29=5135=034=70349=ABC52=20100130-10:53:40.83056=XYZ10=205"`;

exports[`FIXEncoder #encode: Logon should have encoded the FIX message 1`] = `
Message {
  "bodyLengthExpected": null,
  "bodyLengthValid": false,
  "bodyLengthValue": null,
  "checksumExpected": null,
  "checksumValid": false,
  "checksumValue": null,
  "data": Array [
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 35,
      "type": null,
      "validated": false,
      "value": "A",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 34,
      "type": null,
      "validated": false,
      "value": 702,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 49,
      "type": null,
      "validated": false,
      "value": "ABC",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 52,
      "type": null,
      "validated": false,
      "value": "20100130-10:52:40.663",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 56,
      "type": null,
      "validated": false,
      "value": "XYZ",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 95,
      "type": null,
      "validated": false,
      "value": 4,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 96,
      "type": null,
      "validated": false,
      "value": 1234,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 98,
      "type": null,
      "validated": false,
      "value": 0,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 108,
      "type": null,
      "validated": false,
      "value": 60,
    },
  ],
  "description": "",
  "fixVersion": "FIX.5.0SP2",
  "messageContents": Array [],
  "messageSequence": 702,
  "messageString": "",
  "messageType": "",
}
`;

exports[`FIXEncoder #encode: Logon should have encoded the FIX message 2`] = `"8=FIX.5.0SP29=7635=A34=70249=ABC52=20100130-10:52:40.66356=XYZ95=496=123498=0108=6010=090"`;

exports[`FIXEncoder #encode: Multiple encode should have encoded the FIX message 1 1`] = `"8=FIX.4.3|9=76|35=A|34=702|49=ABC|52=20100130-10:52:40.663|56=XYZ|95=4|96=1234|98=0|108=60|10=135|"`;

exports[`FIXEncoder #encode: Multiple encode should have encoded the FIX message 1 2`] = `"8=FIX.4.39=7635=A34=70249=ABC52=20100130-10:52:40.66356=XYZ95=496=123498=0108=6010=135"`;

exports[`FIXEncoder #encode: Multiple encode should have encoded the FIX message 2 1`] = `
Message {
  "bodyLengthExpected": null,
  "bodyLengthValid": false,
  "bodyLengthValue": null,
  "checksumExpected": null,
  "checksumValid": false,
  "checksumValue": null,
  "data": Array [
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 35,
      "type": null,
      "validated": false,
      "value": "A",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 34,
      "type": null,
      "validated": false,
      "value": 702,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 49,
      "type": null,
      "validated": false,
      "value": "ABC",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 52,
      "type": null,
      "validated": false,
      "value": "20100130-10:52:40.663",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 56,
      "type": null,
      "validated": false,
      "value": "XYZ",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 95,
      "type": null,
      "validated": false,
      "value": 4,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 96,
      "type": null,
      "validated": false,
      "value": 1234,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 98,
      "type": null,
      "validated": false,
      "value": 0,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 108,
      "type": null,
      "validated": false,
      "value": 60,
    },
  ],
  "description": "",
  "fixVersion": "FIX.5.0SP2",
  "messageContents": Array [],
  "messageSequence": 702,
  "messageString": "",
  "messageType": "",
}
`;

exports[`FIXEncoder #encode: Multiple encode should have encoded the FIX message 2 2`] = `"8=FIX.5.0SP29=7635=A34=70249=ABC52=20100130-10:52:40.66356=XYZ95=496=123498=0108=6010=090"`;

exports[`FIXEncoder #encode: tag ordering should have encoded the FIX message in correct order 1 1`] = `
Message {
  "bodyLengthExpected": null,
  "bodyLengthValid": false,
  "bodyLengthValue": null,
  "checksumExpected": null,
  "checksumValid": false,
  "checksumValue": null,
  "data": Array [
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 35,
      "type": null,
      "validated": false,
      "value": "1",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 49,
      "type": null,
      "validated": false,
      "value": "ABC",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 56,
      "type": null,
      "validated": false,
      "value": "XYZ",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 34,
      "type": null,
      "validated": false,
      "value": 1,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 112,
      "type": null,
      "validated": false,
      "value": "reqId",
    },
  ],
  "description": "",
  "fixVersion": "FIX.5.0SP2",
  "messageContents": Array [],
  "messageSequence": 1,
  "messageString": "",
  "messageType": "",
}
`;

exports[`FIXEncoder #encode: tag ordering should have encoded the FIX message in correct order 2 1`] = `
Message {
  "bodyLengthExpected": null,
  "bodyLengthValid": false,
  "bodyLengthValue": null,
  "checksumExpected": null,
  "checksumValid": false,
  "checksumValue": null,
  "data": Array [
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 35,
      "type": null,
      "validated": false,
      "value": "1",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 49,
      "type": null,
      "validated": false,
      "value": "ABC",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 56,
      "type": null,
      "validated": false,
      "value": "XYZ",
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 34,
      "type": null,
      "validated": false,
      "value": 1,
    },
    Field {
      "category": null,
      "description": null,
      "enumeration": null,
      "name": null,
      "section": null,
      "tag": 112,
      "type": null,
      "validated": false,
      "value": "reqId",
    },
  ],
  "description": "",
  "fixVersion": "FIX.5.0SP2",
  "messageContents": Array [],
  "messageSequence": 1,
  "messageString": "",
  "messageType": "",
}
`;
